# rusty-ray-tracer

./: Cargo.toml  README.md
src/: main.rs  world.rs
src/models/: hittable.rs  mod.rs  sphere.rs
src/structs/: colour.rs  mod.rs  pixel.rs  point3.rs  ray.rs  vec3.rs
