[package]
name = "rusty-ray-tracer"
version = "0.1.0"
authors = ["Axel Örn <dev@absalon.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
pixels = "0.3.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"
